Fix spacing issue on empty topic search results

--- a/styleguide/source/assets/scss/04-templates/_two-column-right--75-25.scss
+++ b/styleguide/source/assets/scss/04-templates/_two-column-right--75-25.scss
@@ -62,3 +62,12 @@
     grid-area: sidebar;
   }
 }
+
+//Topic search overide
+
+.ama__category-index.ama__layout--two-col-right--75-25 {
+  .ama__layout--two-col-right--75-25__left {
+    grid-row: unset;
+    grid-area: unset;
+  }
+}
